@@ -21,7 +21,7 @@
         <spring.version>5.1.2.RELEASE</spring.version>
         <junit.version>4.11</junit.version>
         <log4j.version>1.2.17</log4j.version>
-        <sonar.host.url>http://18.221.207.24:9000/</sonar.host.url>
+        <sonar.host.url>http://18.221.207.24:9000/</sonar.host.url> <!-- Updated SonarQube URL -->
         <sonar.login>admin</sonar.login>
         <sonar.password>admin</sonar.password>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -156,6 +156,7 @@
                     <javaOpts>
                         <arg>-Dsonar.java.binaries=target/classes</arg>
                         <arg>-Dsonar.java.source=17</arg>
+                        <arg>--add-opens java.base/java.lang=ALL-UNNAMED</arg> <!-- Added JVM option for Java 11 module issue -->
                     </javaOpts>
                 </configuration>
             </plugin>
